--- a/reset.css
+++ b/reset.css
@@ -28,6 +28,10 @@ body {
 }
 ol, ul {
 	list-style: none;
+	list-style: none;
+	list-style: none;
+	list-style: none;
+	
 }
 blockquote, q {
 	quotes: none;
