--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 50px 0px;
 }
 
 .canvas{
@@ -14,7 +15,13 @@ body{
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    color: rgba(0, 0, 0, 0.8);
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 12px;
 }
+
 
 .controls{
     margin-top: 80px;
@@ -37,6 +44,11 @@ body{
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
+
+.controls__btns button:active{
+    transform: scale(0.98);
+}
+
 .controls .controls__colors{
     display: flex;
 }
@@ -47,4 +59,8 @@ body{
     border-radius: 25px;
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+
+.controls .controls__range{
+    margin-bottom: 30px;
 }
